
cmake_minimum_required(VERSION 3.22.0)
project(CMake_N2)
add_executable(CMake_Homework_N2 main.cpp FigureClass.cpp FigureClass.h Triangle.cpp Triangle.h RectangularTriangle.cpp RectangularTriangle.h IsoscelesTriangle.cpp IsoscelesTriangle.h EqualateralTriangle.cpp EqualateralTriangle.h Quadrangle.cpp Quadrangle.h Parallelogram.cpp Parallelogram.h Rectangle.cpp Rectangle.h Rhomb.cpp Rhomb.h Square.cpp Square.h)